kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-cicd-frontend
  labels:
    app: devops-cicd-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-cicd-frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: devops-cicd-frontend

    spec:
      containers:
        - name: frontend
          image: chanchalkhatua1/devops-cicd-platform:1.0.0

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
