kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-cicd-frontend

spec:
  selector:
    app: devops-cicd-frontend

  type: NodePort

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
