kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-cicd-frontend

spec:
  ingressClassName: nginx

  rules:
    - host: devops.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devops-cicd-frontend
                port:
                  number: 80
